Full Vue Vertical (Colonnes) Presque fini
Bug en cours :

Quelques bugs de tailles (cad des divs pas modifié comme il faut)
Hauteur pas à 100% comme je le souhaite (dépasse un peu ..)

A ajouter :
-> Suppression d'un panneau

Next -> Panneau Horizontaux

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sweetalert": "^2.1.0",
     "vue": "^2.5.2",
     "vue-multipane": "^0.9.5",
-    "vue-splitpane": "^1.0.2"
+    "vue-splitpane": "^1.0.2",
+    "vue-touch": "^2.0.0-beta.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
